Bug 458159 -- [Vista only] Drag'n'drop attachment out of Shredder (desktop or other folder) creates 0 byte file. The fix is to set the content length correctly for mailnews URLs. Also move a lot of progress code over to 64-bit integers. r=bienvenu, sr=Standard8